--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "george-githuma-portfolio-website",
-  "homepage": "https://georgegithuma.com",
+  "homepage": "http://georgegithuma.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
